parser.js
module.exports = // Generated by Peggy 1.2.0.
//
// https://peggyjs.org/
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function C() { this.constructor = child; }
    C.prototype = parent.prototype;
    child.prototype = new C();
  }

  function peg$SyntaxError(message, expected, found, location) {
    var self = Error.call(this, message);
    if (Object.setPrototypeOf) {
      Object.setPrototypeOf(self, peg$SyntaxError.prototype);
    }
    self.expected = expected;
    self.found = found;
    self.location = location;
    self.name = "SyntaxError";
    return self;
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$padEnd(str, targetLength, padString) {
    padString = padString || " ";
    if (str.length > targetLength) { return str; }
    targetLength -= str.length;
    padString += padString.repeat(targetLength);
    return str + padString.slice(0, targetLength);
  }

  peg$SyntaxError.prototype.format = function(sources) {
    var str = "Error: " + this.message;
    if (this.location) {
      var src = null;
      var k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      var s = this.location.start;
      var loc = this.location.source + ":" + s.line + ":" + s.column;
      if (src) {
        var e = this.location.end;
        var filler = peg$padEnd("", s.line.toString().length, ' ');
        var line = src[s.line - 1];
        var last = s.line === e.line ? e.column : line.length + 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + s.line + " | " + line + "\n"
            + filler + " | " + peg$padEnd("", s.column - 1, ' ')
            + peg$padEnd("", last - s.column, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  };

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
      literal: function(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class: function(expectation) {
        var escapedParts = expectation.parts.map(function(part) {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any: function() {
        return "any character";
      },

      end: function() {
        return "end of input";
      },

      other: function(expectation) {
        return expectation.description;
      }
    };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = expected.map(describeExpectation);
      var i, j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== undefined ? options : {};

    var peg$FAILED = {};
    var peg$source = options.grammarSource;

    var peg$startRuleFunctions = { start: peg$parsestart };
    var peg$startRuleFunction = peg$parsestart;

    var peg$c0 = "var";
    var peg$c1 = "=";
    var peg$c2 = ";";
    var peg$c3 = "print";
    var peg$c4 = "if";
    var peg$c5 = "(";
    var peg$c6 = ")";
    var peg$c7 = "{";
    var peg$c8 = "}";
    var peg$c9 = "else";
    var peg$c10 = "while";
    var peg$c11 = "for";
    var peg$c12 = "+";
    var peg$c13 = "==";
    var peg$c14 = ">";
    var peg$c15 = "<";
    var peg$c16 = "%";
    var peg$c17 = "\"";
    var peg$c18 = "-";
    var peg$c19 = "0";
    var peg$c20 = ".";
    var peg$c21 = "true";
    var peg$c22 = "false";

    var peg$r0 = /^[^"]/;
    var peg$r1 = /^[1-9]/;
    var peg$r2 = /^[0-9]/;
    var peg$r3 = /^[eE]/;
    var peg$r4 = /^[+\-]/;
    var peg$r5 = /^[A-Za-z_]/;
    var peg$r6 = /^[A-Za-z0-9_]/;
    var peg$r7 = /^[ \t\n\r]/;

    var peg$e0 = peg$literalExpectation("var", false);
    var peg$e1 = peg$literalExpectation("=", false);
    var peg$e2 = peg$literalExpectation(";", false);
    var peg$e3 = peg$literalExpectation("print", false);
    var peg$e4 = peg$literalExpectation("if", false);
    var peg$e5 = peg$literalExpectation("(", false);
    var peg$e6 = peg$literalExpectation(")", false);
    var peg$e7 = peg$literalExpectation("{", false);
    var peg$e8 = peg$literalExpectation("}", false);
    var peg$e9 = peg$literalExpectation("else", false);
    var peg$e10 = peg$literalExpectation("while", false);
    var peg$e11 = peg$literalExpectation("for", false);
    var peg$e12 = peg$literalExpectation("+", false);
    var peg$e13 = peg$literalExpectation("==", false);
    var peg$e14 = peg$literalExpectation(">", false);
    var peg$e15 = peg$literalExpectation("<", false);
    var peg$e16 = peg$literalExpectation("%", false);
    var peg$e17 = peg$otherExpectation("String");
    var peg$e18 = peg$literalExpectation("\"", false);
    var peg$e19 = peg$classExpectation(["\""], true, false);
    var peg$e20 = peg$otherExpectation("Number");
    var peg$e21 = peg$literalExpectation("-", false);
    var peg$e22 = peg$literalExpectation("0", false);
    var peg$e23 = peg$classExpectation([["1", "9"]], false, false);
    var peg$e24 = peg$classExpectation([["0", "9"]], false, false);
    var peg$e25 = peg$literalExpectation(".", false);
    var peg$e26 = peg$classExpectation(["e", "E"], false, false);
    var peg$e27 = peg$classExpectation(["+", "-"], false, false);
    var peg$e28 = peg$otherExpectation("Boolean");
    var peg$e29 = peg$literalExpectation("true", false);
    var peg$e30 = peg$literalExpectation("false", false);
    var peg$e31 = peg$otherExpectation("Identifier");
    var peg$e32 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false);
    var peg$e33 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false);
    var peg$e34 = peg$otherExpectation("whitespace");
    var peg$e35 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

    var peg$f0 = function(stmts) {
    	var result = [];
        stmts.forEach(function(stmt) {
        	if(stmt[0] === undefined) {
            	return;
            }
            if(Array.isArray(stmt[0])) {
            	result.push(...stmt[0]);
            } else {
            	result.push(stmt[0]);
            }
        });
        return result;
    };
    var peg$f1 = function(stmt) { return stmt; };
    var peg$f2 = function(name, value) {
    	addresses.push(name);
        return [
            ...value,
        	["literal", addresses.indexOf(name)],
            "store"
        ];
    	//return undefined;
    };
    var peg$f3 = function(name, value) {
        if( addresses.indexOf(name) == -1) {
        	error("Undefined variable " + id);
        }
        return [
            ...value,
        	["literal", addresses.indexOf(name)],
            "store"
        ];
    	//return undefined;
    };
    var peg$f4 = function(value) {
        return [
            ...value,
            "print"
        ];
    	//return undefined;
    };
    var peg$f5 = function(condition, stmts1, stmts2) {
    	return [
        	...condition,
            ["relativeJumpIfFalse", stmts1.length + 1],
        	...stmts1,
            ["relativeJump", stmts2.length],
            ...stmts2
        ];
    };
    var peg$f6 = function(condition, stmts1, if2) {
    	return [
        	...condition,
            ["relativeJumpIfFalse", stmts1.length + 1],
        	...stmts1,
            ["relativeJump", if2.length],
            ...if2
        ];
    };
    var peg$f7 = function(condition, stmts) {
    	return [
        	...condition,
            ["relativeJumpIfFalse", stmts.length],
        	...stmts
        ];
    };
    var peg$f8 = function(condition, stmts) {
    	return [
        	...condition,
            ["relativeJumpIfFalse", stmts.length + 1],
        	...stmts,
            ["relativeJump", (condition.length + stmts.length + 2) * -1]
        ];
    };
    var peg$f9 = function(stmt1, condition, stmt2, body) {
    	return [
        	...stmt1,
        	...condition,
            ["relativeJumpIfFalse", body.length + stmt2.length + 1],
        	...body,
            ...stmt2,
            ["relativeJump", (condition.length + body.length + stmt2.length + 2) * -1]
        ];
    };
    var peg$f10 = function(exp1, oper, exp2) {
        	return [...exp1, ...exp2, oper];
        };
    var peg$f11 = function(val) { return [["literal", val]]; };
    var peg$f12 = function(id) {
        	if( addresses.indexOf(id) == -1) {
            	error("Undefined variable " + id);
            }
        	return [["literal", addresses.indexOf(id)], "load"];
        };
    var peg$f13 = function(letters) { return letters.join(""); };
    var peg$f14 = function() { return Number.parseFloat(text()); };
    var peg$f15 = function() { return Number.parseInt(text()); };
    var peg$f16 = function() { return true; };
    var peg$f17 = function() { return false; };

    var peg$currPos = 0;
    var peg$savedPos = 0;
    var peg$posDetailsCache = [{ line: 1, column: 1 }];
    var peg$maxFailPos = 0;
    var peg$maxFailExpected = [];
    var peg$silentFails = 0;

    var peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function offset() {
      return peg$savedPos;
    }

    function range() {
      return {
        source: peg$source,
        start: peg$savedPos,
        end: peg$currPos
      };
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos];
      var p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line: details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;

        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos);
      var endPosDetails = peg$computePosDetails(endPos);

      return {
        source: peg$source,
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsestatements();

      return s0;
    }

    function peg$parsestatements() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parsestatement();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s1 = peg$f0(s1);
      s0 = s1;

      return s0;
    }

    function peg$parsestatement() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$parsestatement_var();
      if (s2 === peg$FAILED) {
        s2 = peg$parsestatement_print();
        if (s2 === peg$FAILED) {
          s2 = peg$parsestatement_if_elseif();
          if (s2 === peg$FAILED) {
            s2 = peg$parsestatement_if_else();
            if (s2 === peg$FAILED) {
              s2 = peg$parsestatement_if();
              if (s2 === peg$FAILED) {
                s2 = peg$parsestatement_for();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsestatement_while();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsestatement_assignment();
                  }
                }
              }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_var() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c0) {
        s1 = peg$c0;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c1;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseexpression();
            if (s7 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s8 = peg$c2;
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
              if (s8 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f2(s3, s7);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_assignment() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseidentifier();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c1;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = peg$parseexpression();
          if (s5 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 59) {
              s6 = peg$c2;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s6 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f3(s1, s5);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_print() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseexpression();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s4 = peg$c2;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_if_else() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 40) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = peg$parseexpression();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 41) {
              s7 = peg$c6;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 123) {
                s9 = peg$c7;
                peg$currPos++;
              } else {
                s9 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
              if (s9 !== peg$FAILED) {
                s10 = peg$parse_();
                s11 = peg$parsestatements();
                if (s11 !== peg$FAILED) {
                  s12 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s13 = peg$c8;
                    peg$currPos++;
                  } else {
                    s13 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e8); }
                  }
                  if (s13 !== peg$FAILED) {
                    s14 = peg$parse_();
                    if (input.substr(peg$currPos, 4) === peg$c9) {
                      s15 = peg$c9;
                      peg$currPos += 4;
                    } else {
                      s15 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e9); }
                    }
                    if (s15 !== peg$FAILED) {
                      s16 = peg$parse_();
                      if (input.charCodeAt(peg$currPos) === 123) {
                        s17 = peg$c7;
                        peg$currPos++;
                      } else {
                        s17 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e7); }
                      }
                      if (s17 !== peg$FAILED) {
                        s18 = peg$parse_();
                        s19 = peg$parsestatements();
                        if (s19 !== peg$FAILED) {
                          s20 = peg$parse_();
                          if (input.charCodeAt(peg$currPos) === 125) {
                            s21 = peg$c8;
                            peg$currPos++;
                          } else {
                            s21 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e8); }
                          }
                          if (s21 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s0 = peg$f5(s5, s11, s19);
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_if_elseif() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 40) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = peg$parseexpression();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 41) {
              s7 = peg$c6;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 123) {
                s9 = peg$c7;
                peg$currPos++;
              } else {
                s9 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
              if (s9 !== peg$FAILED) {
                s10 = peg$parse_();
                s11 = peg$parsestatements();
                if (s11 !== peg$FAILED) {
                  s12 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s13 = peg$c8;
                    peg$currPos++;
                  } else {
                    s13 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e8); }
                  }
                  if (s13 !== peg$FAILED) {
                    s14 = peg$parse_();
                    if (input.substr(peg$currPos, 4) === peg$c9) {
                      s15 = peg$c9;
                      peg$currPos += 4;
                    } else {
                      s15 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e9); }
                    }
                    if (s15 !== peg$FAILED) {
                      s16 = peg$parse_();
                      s17 = peg$parsestatement_if_elseif();
                      if (s17 === peg$FAILED) {
                        s17 = peg$parsestatement_if_else();
                        if (s17 === peg$FAILED) {
                          s17 = peg$parsestatement_if();
                        }
                      }
                      if (s17 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s0 = peg$f6(s5, s11, s17);
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement_if() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
